# cex-gambling-platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json
backend/: Dockerfile  package.json  tsconfig.json
backend/rust/: Cargo.toml
backend/rust/src/: main.rs
backend/src/: index.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/models/: Gambling.ts  Order.ts  User.ts
backend/src/routes/: auth.ts  gambling.ts  trading.ts  wallet.ts
backend/src/utils/: database.ts  ethereum.ts  orderEngine.ts  solana.ts  websocket.ts
database/: init.sql
docker/nginx/: nginx.conf
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/components/: GamblingInterface.tsx  Header.tsx  Layout.tsx  OrderBook.tsx  OrderForm.tsx  Sidebar.tsx  TradingChart.tsx  TradingInterface.tsx
frontend/contexts/: AuthContext.tsx  WebSocketContext.tsx
frontend/hooks/: useWebSocket.tsx
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/styles/: globals.css
frontend/utils/: api.js  web3.js
order-engine/: Cargo.toml  Dockerfile
order-engine/src/: engine.rs  main.rs  order.rs  orderbook.rs  websocket.rs
scripts/: deploy.sh  dev.sh
smart-contracts/ethereum/contracts/: DEX.sol  Staking.sol
smart-contracts/ethereum/migrations/: 1_initial_migration.js
smart-contracts/solana/: Anchor.toml  package.json
smart-contracts/solana/programs/gambling/: Cargo.toml
smart-contracts/solana/programs/gambling/src/: lib.rs
