[package]
name = "order-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.4"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
rust_decimal = { version = "1.28", features = ["serde-float"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "order_matching"
harness = false
